--- a/src/html/header.html
+++ b/src/html/header.html
@@ -67,6 +67,11 @@
 
 					<button class="button__signup _btn-orange">Sign Up</button>
 				</div>
+				<div class="icon-menu">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
 			</div>
 		</div>
 	</div>
